--- a/package.json
+++ b/package.json
@@ -3,12 +3,21 @@
   "version": "1.0.0",
   "description": "It's 2016, let's WordPress like it",
   "main": "index.php",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "keywords": [
     "WordPress"
   ],
   "author": "Justin Chick <hey@justinchick.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "autoprefixer": "^6.3.6",
+    "css-mqpacker": "^4.0.1",
+    "cssnano": "^3.5.2",
+    "gulp": "^3.9.1",
+    "gulp-postcss": "^6.1.0",
+    "gulp-size": "^2.1.0",
+    "postcss-css-variables": "^0.5.1",
+    "postcss-cssnext": "^2.5.2",
+    "postcss-import": "^8.1.0",
+    "precss": "^1.4.0"
+  }
 }
